ecsact_interpret/test/errors/cluster_invalid_conflict.ecsact
main package cluster_invalid_conflict;

component CompA { i32 a; }

cluster {
	system SysA {
		readonly CompA;
	}
	system SysB {
		readwrite CompA;
	}
}
